files has been cleared

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0014)about:internet -->
-<html lang="en" class="wp fontawesome-i2svg-active fontawesome-i2svg-complete" style="height: 100%;">
+<html lang="en">
     <head>
 		<title>Welcome</title>
     </head>
